--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "blog-ssr-2.0",
-  "description": "A Vue.js project",
+  "name": "battery",
+  "description": "battery site",
   "author": "pfan <768065158@qq.com>",
   "private": true,
   "scripts": {
@@ -14,6 +14,7 @@
     "build:server": "cross-env NODE_ENV=production webpack --config ./front/build/webpack.server.config.js --progress --hide-modules",
     "addev": "node ./admin/build/dev-server.js",
     "adstart": "cross-env NODE_ENV=production node ./admin/build/dev-server.js",
+    "addevstart": "cross-env NODE_ENV=dev node ./admin/server.js",
     "adserver": "cross-env NODE_ENV=production node ./admin/server.js",
     "adrun": "node ./admin/server.js",
     "adbuild": "rimraf ./admin/dist/ && cross-env NODE_ENV=production webpack --config ./admin/build/webpack.prod.conf.js --progress --hide-modules"
@@ -23,44 +24,50 @@
     "npm": ">=4.0"
   },
   "dependencies": {
-    "axios": "^0.16.2",
+    "axios": "^0.17.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "compression": "^1.6.2",
-    "cross-env": "^4.0.0",
-    "element-ui": "^1.4.3",
+    "cross-env": "^5.1.1",
+    "element-ui": "^1.4.12",
     "es6-promise": "^4.1.0",
     "express": "^4.15.2",
-    "extract-text-webpack-plugin": "^3.0.0",
     "firebase": "^3.7.2",
     "http-proxy-middleware": "^0.17.4",
-    "koa": "^2.3.0",
+    "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
     "koa-favicon": "^2.0.0",
-    "koa-logger": "^3.0.1",
+    "koa-logger": "^3.1.0",
+    "koa-mysql-session": "0.0.2",
     "koa-proxy": "^0.9.0",
-    "koa-router": "^7.2.1",
+    "koa-router": "^7.3.0",
+    "koa-session-minimal": "^3.0.4",
     "koa-static-cache": "^5.1.1",
     "koa-webpack-middleware": "^1.0.7",
     "lru-cache": "^4.0.2",
+    "mysql": "^2.15.0",
     "opn": "^5.1.0",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
     "semver": "^5.4.1",
     "serve-favicon": "^2.4.1",
     "shell": "^0.3.2",
     "shelljs": "^0.7.8",
-    "vue": "^2.4.1",
-    "vue-router": "^2.7.0",
-    "vue-server-renderer": "^2.4.1",
-    "vuex": "^2.3.1",
-    "vuex-router-sync": "^4.1.2"
+    "validator": "^9.4.1",
+    "vue": "^2.5.13",
+    "vue-router": "^3.0.1",
+    "vue-server-renderer": "^2.5.13",
+    "vuex": "^3.0.1",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
-    "babel-core": "^6.24.1",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^7.1.1",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.3",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-component": "^1.0.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-preset-env": "^1.4.0",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",
     "chalk": "^2.0.1",
     "connect-history-api-fallback": "^1.3.0",
     "conventional-changelog": "^1.1.4",
@@ -74,26 +81,29 @@
     "eslint-loader": "^1.7.1",
     "eslint-plugin-html": "^3.0.0",
     "eslint-plugin-import": "^2.2.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "glob": "^7.1.1",
     "html-webpack-plugin": "^2.30.1",
     "husky": "^0.14.3",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.0.10",
     "rimraf": "^2.6.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "sw-precache-webpack-plugin": "^0.11.4",
     "url-loader": "^0.5.8",
     "validate-commit-msg": "^2.14.0",
-    "vue-loader": "^13.0.1",
-    "vue-style-loader": "^3.0.0",
-    "vue-template-compiler": "^2.4.1",
-    "webpack": "3.3.0",
-    "webpack-bundle-analyzer": "^2.2.1",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.17.1",
-    "webpack-merge": "^4.0.0",
-    "webpack-node-externals": "^1.5.4"
+    "vue-loader": "^13.6.2",
+    "vue-style-loader": "^3.0.3",
+    "vue-template-compiler": "^2.5.13",
+    "webpack": "^3.3.0",
+    "webpack-bundle-analyzer": "^2.9.2",
+    "webpack-dev-middleware": "^1.12.2",
+    "webpack-hot-middleware": "^2.21.0",
+    "webpack-merge": "^4.1.1",
+    "webpack-node-externals": "^1.6.0"
   },
   "config": {
     "validate-commit-msg": {
