--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cross-env": "^5.1.1",
     "element-ui": "^2.2.1",
     "es6-promise": "^4.1.0",
+    "eslint-config-o2team": "^0.1.6",
     "express": "^4.15.2",
     "firebase": "^3.7.2",
     "http-proxy-middleware": "^0.17.4",
@@ -63,7 +64,7 @@
   "devDependencies": {
     "autoprefixer": "^6.7.7",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.3",
+    "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.2",
     "babel-plugin-component": "^1.0.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -73,6 +74,7 @@
     "chalk": "^2.0.1",
     "connect-history-api-fallback": "^1.3.0",
     "conventional-changelog": "^1.1.4",
+    "conventional-changelog-cli": "^2.0.5",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
     "cssnano": "^3.10.0",
@@ -83,6 +85,7 @@
     "eslint-loader": "^1.7.1",
     "eslint-plugin-html": "^3.0.0",
     "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-vue": "^4.7.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.6.1",
